chore(test): asList() → asInstanceOf(LIST) (убрать deprecation AssertJ).